# MCOpt

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  preinstall.txt  requirements.txt
demos/: morse_graphs.ipynb  pipeline.py
docs/: ttk-morse-complex.md
experiments/: .gitignore  color_maps.ipynb  fgw_vs_wasserstein_simple.ipynb  heated_cylinder.ipynb  navier_stokes.ipynb  pipeline.py  red_sea.ipynb  runtimes.ipynb  tangaroa.ipynb  util.py  wind.ipynb
experiments/GWMC-Vis-Short/: globals.py  sinusoidal.ipynb
experiments/mcpipeline/: README.md  pyproject.toml
experiments/mcpipeline/mcpipeline/: __init__.py  cache.py  complexes.py  curves.py  gen.py  graphs.py  plotter.py  topo.py
experiments/mcpipeline/mcpipeline/datasets/: __init__.py  dataset.py  sinusoidal.py
experiments/mcpipeline/mcpipeline/vtk/: __init__.py  data.py  filters.py
mcopt/: __init__.py  mm_space.py  morse_graph.py
mcopt/ot/: __init__.py  _fgw.py  bregman.py  gw.py  optim.py
mcpipeline/: README.md  __init__.py  entity.py  gen.py  pipeline.py  target.py  ttk.py  vtk.py
mcpipeline/experiments/: __init__.py  classification.py  fgw.py  gw.py  max_match.py  mds.py  pfgw.py  pgw.py  pw.py  wasserstein.py
mcpipeline/figures/: __init__.py  classification.py  couplings.py  distance.py  graphs.py  max_match.py
mcpipeline/targets/: __init__.py  attributes.py  combine.py  complex.py  couplings.py  dataset.py  download.py  extract.py  figure.py  filegroup.py  graph.py  mm_network.py
mcpipeline/util/: __init__.py  logger.py  progress.py
