[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcopt"
authors = [
  {name = "Carson Storm", email = "carson.storm@outlook.com"}
]
readme = "README.md"
dependencies = [
  "numpy~=1.25.2",
  "networkx~=3.1",
  "POT~=0.9.1"
]
dynamic = ["version", "description"]

[tool.setuptools]
packages = ["mcopt"]