[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpipeline"
authors = [
  {name = "Carson Storm", email = "carson.storm@outlook.com"}
]
readme = "README.md"
dependencies = [
	"matplotlib",
	"kneed"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["mcpipeline"]


[tool.setuptools.dynamic]
version = {attr = "mcpipeline.__version__"}
