[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpipeline"
authors = [
  {name = "Carson Storm", email = "carson.storm@outlook.com"}
]
readme = "README.md"
dependencies = [
	"matplotlib~=3.7.2",
	"kneed~=0.8.5",
	"pandas~=2.0.3",
	"joblib~=1.3.2",
	"tqdm~=4.66.1"
]
dynamic = ["version"]

[project.optional-dependencies]
VTK = ["vtk"]

[tool.setuptools]
packages = ["mcpipeline"]


[tool.setuptools.dynamic]
version = {attr = "mcpipeline.__version__"}
